@@ -1,6 +1,11 @@
 module Druid
   module Elements
     class Image < Element
+
+      def self.finders
+        super + [:alt]
+      end
+      
       def width
         element.width
       end
