@@ -1,6 +1,7 @@
 === 2016-08-04
 * Enhancements
   * Added ability to find TextField by :title
+  * Added ability to find Image by :alt
 === 2016-08-03
 * Enhancements
   * Added ability to find image buttons by src
